--- a/index.css
+++ b/index.css
@@ -2,11 +2,12 @@
   float: left;
 }
 
-.Expo_Me{
-  float: right;
+.Expo_MeCon{
+  background-color: #343434;
+  display: flex;
+  
 }
 
 p {
   color: #ace34d;
-  background-color: #343434;
 }
