--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 #section-Expo{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 p {
