--- a/index.css
+++ b/index.css
@@ -13,11 +13,15 @@ height: 300px;
   justify-content: space-between;
 }
 
+.Projets_title{
+display: flex;
+align-items: center;
+}
+
 p {
   background-color: #343434;
 }
 
 h1{
-display: flex;
-align-items: center;
+
 }
