--- a/index.css
+++ b/index.css
@@ -18,6 +18,12 @@
  justify-content: center;
 }
 
+.Projets_name{
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+
 p {
  color: #ace34d;
  background-color: #343434;
