--- a/index.css
+++ b/index.css
@@ -30,6 +30,12 @@ align-items: center;
 justify-content: space-between;
 }
 
+.code_display A{
+display: flex;
+align-items: center;
+justify-content: space-around;
+}
+
 p {
  color: #ace34d;
  background-color: #343434;
