--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ justify-content: space-between;
 .code_display_A{
 display: flex;
 align-items: center;
-justify-content: space-around;
+justify-content: space-between;
 }
 
 p {
