--- a/index.css
+++ b/index.css
@@ -34,6 +34,13 @@ justify-content: space-between;
 display: flex;
 align-items: center;
 justify-content: space-between;
+width: 100%;
+}
+
+.code, code_Expo{
+ flex: 1; /* Makes items take equal space */
+ padding: 10px;
+ text-align: center;
 }
 
 p {
