--- a/index.css
+++ b/index.css
@@ -56,6 +56,13 @@ pre{
  overflow-x: auto;
 }
 
+.word_code {
+  display: inline-block; 
+  border: 1px solid black; 
+  padding: 2px 5px; 
+  border-radius: 3px; 
+}
+
 h1{
 
 }
