--- a/index.css
+++ b/index.css
@@ -47,6 +47,7 @@ justify-content: space-between;
   border: 1px solid black; 
   padding: 2px 5px; 
   border-radius: 3px; 
+  background-color: #282c34;
 }
 
 p{
