--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
  justify-content: center;
 }
 
-.Projets_name_log{
+.Projets_name{
 display: flex;
 align-items: center;
 justify-content: space-between;
