--- a/index.css
+++ b/index.css
@@ -56,6 +56,12 @@ background-color: #343434;
 padding: 10px
 }
 
+.image-stack {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 p{
  color: #ace34d;
  background-color: #343434;
